Thu Apr 15  9:47:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/UnixFileHandle.m: ([-fileDescriptor]) return a valid file
	descriptor (for /dev/null) for the null device.
	* Source/NSTask.m: ([-launch]) Add code to reset signals in subprocess
	and to close all file descriptors (except stdin, stdout and stderr).

Wed Apr 14 14:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPortNameServer.m: Don't suspend thread while waiting for
	gdomap to start up.
	* Source/NSDistributedNotificationCenter.m: Don't suspend thread while
	waiting for gdnc to start up.

Wed Apr 14 10:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle: ([+allBundles]) implemented (ignoring the frameworks
	issue). Extra internal GNUstep specific methods provided -
	([+_gnustep_target_cpu]), ([+_gnustep_target_dir])
	([+_gnustep_target_os]), ([+_library_combo])
	So that we can easily determine wrapper path information.
	* Source/NSTaks: Preparation for garbage collecting.
	Major work on launching - now makes intelligent use of launch path.
	Tries various GNUstep directories - if unable to find executable
	that way, resorts to using the unix PATH environment variable.
	* Source/NSPortNameServer.m: Removed a couple of unix specific calls.
	* Source/NSDistributedNotificationCenter.m: Removed a couple of unix
	specific calls.
	* Tools/Makefile.postamble: Install gdnc in non-library specific dir.

Tue Apr 13 22:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: Updated to use Info.plist if Info-gnustep.plist
	is not available.  Also updated to look in alternative directories
	for the object file to load... If not in the machine/os/lib-combo
	subdirectory, tries the machine/os directory and then the top-level
	directory.  Also updated to cope with the case where the NSExecutable
	entry of the Info.plist specifies a path rather than a simple file name.