@@ -20,6 +20,8 @@
    License along with this library; if not, write to the Free
    Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
    */ 
+#ifndef __NSHost_h_GNUSTEP_BASE_INCLUDE
+#define __NSHost_h_GNUSTEP_BASE_INCLUDE
 
 #include <base/preface.h>
 
@@ -76,3 +78,6 @@
 - (NSArray*) addresses;
 
 @end
+
+#endif
+
