@@ -1,3 +1,7 @@
+Thu Apr 15 10:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/include/NSHost.h: Use #ifdefs to prevent multiple inclusion.
+
 Thu Apr 15  9:47:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/UnixFileHandle.m: ([-fileDescriptor]) return a valid file
